Fix more XHTML problems.

--- a/spud/templates/spud/photo_edit.html
+++ b/spud/templates/spud/photo_edit.html
@@ -88,7 +88,7 @@
   <table>
   {% for relation in object.relations_1.all %}
             <tr>
-            <td><a href="{% get_photo_view_url relation.photo_2 size %}">{{ relation.desc_2 }}</a>
+            <td><a href="{% get_photo_view_url relation.photo_2 size %}">{{ relation.desc_2 }}</a></td>
             {% if perms.spud.edit_photo_relation %}
             <td><a class="changelink" href="{% get_edit_url relation %}?next={{ request.path }}">Edit</a></td>
             {% endif %}
