--- a/spud/templates/spud/place_detail.html
+++ b/spud/templates/spud/place_detail.html
@@ -1,22 +1,12 @@
-{% extends "base_site.html" %}
+{% extends "django_webs/object_detail.html" %}
 {% load i18n %}
 {% load photo %}
+{% load webs %}
 
-{% block stylesheet %}{{ MEDIA_URL }}css/photolists.css{% endblock %}
+{% block title %}{{ object }} page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}{% endblock %}
+{% block object_title %}{{ object }} page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}{% endblock %}
 
-{% block breadcrumbs %}{% show_breadcrumbs breadcrumbs %}{% endblock %}
-
-{% block title %}{{object}}{% endblock %}
-
-{% block extrahead %}{{ block.super }}
-{{ media }}
-{% endblock %}
-
-{% block content %}
-<h1>{{object}} page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}</h1>
-
-{% show_view_buttons web user object %}
-
+{% block object %}
 {%ifequal page_obj.number 1 %}
 <div class="infobox">
     {% if object.address or object.address2 or object.city or object.zip or object.state or object.country %}
@@ -76,7 +66,7 @@
 
 {% show_photo_list page_obj web object default_list_size default_view_size %}
 
-{% pagination page_obj web %}
+{% pagination page_obj %}
 
 <h2>Search</h2>
 
@@ -84,5 +74,4 @@
 <table>{{ form.as_table }}</table>
 <input type="submit" />
 </form>
-
 {% endblock %}
