--- a/spud/templates/spud/category_detail.html
+++ b/spud/templates/spud/category_detail.html
@@ -35,7 +35,7 @@
 
 <h2>Search</h2>
 
-<form method="post">
+<form method="get">
 <table>{{ form.as_table }}</table>
 <input type="submit" />
 </form>
