--- a/spud/templates/spud/place_detail.html
+++ b/spud/templates/spud/place_detail.html
@@ -70,7 +70,7 @@
 
 <h2>Search</h2>
 
-<form method="post">
+<form method="get">
 <table>{{ form.as_table }}</table>
 <input type="submit" />
 </form>
