--- a/spud/templates/spud/album_detail.html
+++ b/spud/templates/spud/album_detail.html
@@ -14,13 +14,13 @@
 <div class="children">
     <ul class="photo_list">
     {% for album in object.children.all %}
-        <li class='photo_list_item' onClick='parent.location="{% get_view_url album %}"'>
+        <li class='photo_list_item' onclick='parent.location="{% get_view_url album %}"'>
             <a href="{% get_view_url album %}">
                 {% with album.get_cover_photo as photo %}{% if photo %}<img src='{% get_thumb_url photo default_list_size %}' alt=''/><br/>{% endif %}{% endwith %}
                 <div class='title'>{{ album }}</div>
             </a>
             {% if album.sortname %}<div class='sort'>({{album.sortname}} {{album.sortorder}})</div>{% endif %}
-            {% if album.album_description %}<div class='desc' onClick='parent.location="{% get_view_url album %}"'>{{album.album_description|urlizetrunc:20}}</div>{% endif %}
+            {% if album.album_description %}<div class='desc' onclick='parent.location="{% get_view_url album %}"'>{{album.album_description|urlizetrunc:20}}</div>{% endif %}
         </li>
     {% endfor %}
     <br class="clear"/>
