--- a/spud/templates/spud/photo_edit.html
+++ b/spud/templates/spud/photo_edit.html
@@ -41,7 +41,7 @@
 </div>
 </div>
 
-<div class='photo_detail_photo_detail'>
+<div class='photo_detail_block photo_detail_photo_detail'>
 <h2>Photo Details</h2>
 
 <dl>
@@ -106,7 +106,7 @@
 </dl>
 </div>
 
-<div class='photo_detail_camera_detail'>
+<div class='photo_detail_block photo_detail_camera_detail'>
 <h2>Camera Details</h2>
 
 <dl>
