--- a/media/css/layout.css
+++ b/media/css/layout.css
@@ -27,3 +27,7 @@
 #content-related h3 { font-size:12px; color:#666; margin-bottom:3px; }
 #content-related h4 { font-size:11px; }
 #content-related .module h2 { background:#eee url(../img/admin/nav-bg.gif) bottom left repeat-x; color:#666; }
+
+@media screen and (max-width: 700px) {
+#content { margin-left:0; margin-right:0; }
+}
